Bootstrap Grid Assigment

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="col col-sm order-sm-first col-md">
           <h2>Alberto Somayya</h2>
           <h4>Executive Chef</h4>
-          <p>
+          <p class="d-none d-sm-block">
             Award winning three-star Michelin chef with wide International
             experience having worked closely with whos-who in the culinary
             world, he specializes in creating mouthwatering Indo-Italian fusion
@@ -86,14 +86,14 @@
             <h5>Links</h5>
             <ul class="list-unstyled">
               <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
+              <li><a href="aboutus.html">About</a></li>
               <li><a href="#">Menu</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
           <div class="col-7 col-sm-5">
             <h5>Our Address</h5>
-            <address>
+            <address class="address">
               121, Clear Water Bay Road<br />
               Clear Water Bay, Kowloon<br />
               HONG KONG<br />
