Images and Media

--- a/aboutus.html
+++ b/aboutus.html
@@ -46,7 +46,9 @@
             your culinary senses!
           </p>
         </div>
-        <div class="col-12 col-sm"></div>
+        <div class="col-12 col-sm align-self-center">
+          <img src="img/logo.png" class='img-fluid' alt="">
+        </div>
       </div>
     </div>
   </header>
