--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </nav>
   <header class="jumbotron">
     <div class="container">
-      <div class="row row-header">
+      <div class="row row-header align-items-center">
         <div class="col-12 col-sm-6">
           <h1>Ristorante con Fusion</h1>
           <p>
@@ -49,7 +49,14 @@
             your culinary senses!
           </p>
         </div>
-        <div class="col-12 col-sm align-self-center"> <img src="/img/logo.png" class='img-fluid'>
+        <div class="col-12 col-sm-6 align-self-center justify-content-center">
+          <div class="col-auto d-sm-inline">
+            <img src="/img/logo.png" class='img-fluid'>
+          </div>
+          <div class='col-auto d-sm-inline'>
+            <a class='btn btn-sm d-block d-sm-inline-block bg-warning text-dark' role='button' href='#card'>Reserve
+              Table</a>
+          </div>
         </div>
       </div>
     </div>
@@ -66,7 +73,7 @@
           <div class='media-body'>
             <h2 class='mt-0'>Uthappizza <span class='badge badge-danger'>HOT</span> <span
                 class='badge badge-pill badge-secondary'>$4.99</span></h2>
-            <p>
+            <p class="d-none d-sm-block">
               A unique combination of Indian Uthappam (pancake) and Italian pizza,
               topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia
               onion, Guntur chillies and Buffalo Paneer.
@@ -81,13 +88,18 @@
         <h3>This Month's Promotions</h3>
       </div>
       <div class="col col-sm col-md">
-        <h2>Weekend Grand Buffet</h2>
-        <p>
-          Featuring mouthwatering combinations with a choice of five different
-          salads, six enticing appetizers, six main entrees and five choicest
-          desserts. Free flowing bubbly and soft drinks. All for just $19.99
-          per person
-        </p>
+        <div class='media'>
+          <div class='media-body'>
+            <h2 class='mt-0'>Weekend Grand Buffet <span class='badge badge-danger'>NEW</span></h2>
+            <p class="d-none d-sm-block">
+              Featuring mouthwatering combinations with a choice of five different
+              salads, six enticing appetizers, six main entrees and five choicest
+              desserts. Free flowing bubbly and soft drinks. All for just $19.99
+              per person
+            </p>
+          </div>
+          <img src="img/buffet.png" alt='buffet' class='d-flex img-thumbnail align-self-center'>
+        </div>
       </div>
     </div>
 
@@ -111,58 +123,127 @@
         </div>
       </div>
     </div>
-  </div>
+    <div class='row row-content align-items-center justify-content-center'>
+      <div class='col-12 col-sm-8'>
+        <div class='card' id='card'>
+          <h3 class='card-header bg-warning text-white'>Reserve a Table</h3>
+          <div class='card-body'>
+            <form action="">
+              <div class="form-group row">
+                <legend class="col-form-label col-sm-2">Number of Guests</legend>
+                <div class="col-sm-10">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="radio1" value="1">
+                    <label class="form-check-label" for="radio1">
+                      1
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="radio2" value="2">
+                    <label class="form-check-label" for="radio2">
+                      2
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="radio3" value="3">
+                    <label class="form-check-label" for="radio3">
+                      3
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="radio4" value="4">
+                    <label class="form-check-label" for="radio4">
+                      4
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="radio5" value="5">
+                    <label class="form-check-label" for="radio5">
+                      5
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="radio6" value="6">
+                    <label class="form-check-label" for="radio6">
+                      6
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class='form-group row'>
+                <legend class="col-form-label col-sm-2">Date and Time</legend>
+                <div class='form-row col-sm-10'>
+                  <div class='col-auto'>
+                    <input type="text" class="form-control mb-2" placeholder="Date">
+                  </div>
+                  <div class='col-auto'>
+                    <input type="text" class="form-control" placeholder="Time">
+                  </div>
+                </div>
+              </div>
+              <div class='form-group row'>
+                <div class='col-sm-2 offset-sm-2'>
+                  <button type="submit" class='btn btn-primary'>Reserve</button>
+                </div>
+              </div>
+            </form>
 
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-4 offset-1 col-sm-2">
-          <h5>Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#">Home</a></li>
-            <li><a href="./aboutus.html">About</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div class="col-7 col-sm-5">
-          <h5>Our Address</h5>
-          <address class="address">
-            121, Clear Water Bay Road<br />
-            Clear Water Bay, Kowloon<br />
-            HONG KONG<br />
-            <i class="fa fa-phone fa-lg"></i> +852 1234 5678<br />
-            <i class="fa fa-fax fa-lg"></i> +852 8765 4321<br />
-            <i class="fa fa-envelope fa-lg"></i>
-            <a href="mailto:confusion@food.net">confusion@food.net</a>
-          </address>
-        </div>
-        <div class="col-12 col-sm-4 align-self-center">
-          <div class="text-center">
-            <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i
-                class="fa fa-google-plus fa-lg"></i></a>
-            <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i
-                class="fa fa-facebook fa-lg"></i></a>
-            <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
-                class="fa fa-linkedin fa-lg"></i></a>
-            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
-                class="fa fa-twitter fa-lg"></i></a>
-            <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i
-                class="fa fa-youtube fa-lg"></i></a>
-            <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
           </div>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <p>© Copyright 2018 Ristorante Con Fusion</p>
+    </div>
+
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 offset-1 col-sm-2">
+            <h5>Links</h5>
+            <ul class="list-unstyled">
+              <li><a href="#">Home</a></li>
+              <li><a href="./aboutus.html">About</a></li>
+              <li><a href="#">Menu</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-7 col-sm-5">
+            <h5>Our Address</h5>
+            <address class="address">
+              121, Clear Water Bay Road<br />
+              Clear Water Bay, Kowloon<br />
+              HONG KONG<br />
+              <i class="fa fa-phone fa-lg"></i> +852 1234 5678<br />
+              <i class="fa fa-fax fa-lg"></i> +852 8765 4321<br />
+              <i class="fa fa-envelope fa-lg"></i>
+              <a href="mailto:confusion@food.net">confusion@food.net</a>
+            </address>
+          </div>
+          <div class="col-12 col-sm-4 align-self-center">
+            <div class="text-center">
+              <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i
+                  class="fa fa-google-plus fa-lg"></i></a>
+              <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i
+                  class="fa fa-facebook fa-lg"></i></a>
+              <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
+                  class="fa fa-linkedin fa-lg"></i></a>
+              <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                  class="fa fa-twitter fa-lg"></i></a>
+              <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i
+                  class="fa fa-youtube fa-lg"></i></a>
+              <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <p>© Copyright 2018 Ristorante Con Fusion</p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
-  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    </footer>
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
